fix 2 row images on small displays

--- a/css/main.scss
+++ b/css/main.scss
@@ -433,6 +433,9 @@ section {
             .r2 {
                 aspect-ratio: 1;
             }
+            .c1 {
+                aspect-ratio: unset;
+            }
         }
 
         .projects {
